[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "rpou"
version = "0.0.1"
authors = [
  { name="yisenlin", email="ysl.130@qq.com" },
]
description = "rpo's util"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "open3d",
    "scipy",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/rpo130/"
"Bug Tracker" = "https://github.com/rpo130/"